crates/native/tests/snapshots/parser_tests__schema_with_union.snap
---
source: crates/native/tests/parser_tests.rs
expression: "parse!(\"union SearchResult = User | Post type User { id: ID! } type Post { id: ID! }\")"
---
Document {
    source: Source {
        code: "union SearchResult = User | Post type User { id: ID! } type Post { id: ID! }",
        file_path: "test.graphql",
        start_line: 1,
    },
    definitions: [
        TypeSystem(
            Type(
                Union(
                    UnionTypeDefinition {
                        description: None,
                        name: TypeName(
                            Name(
                                "SearchResult",
                            ),
                        ),
                        directives: [],
                        members: [
                            TypeName(
                                Name(
                                    "User",
                                ),
                            ),
                            TypeName(
                                Name(
                                    "Post",
                                ),
                            ),
                        ],
                    },
                ),
            ),
        ),
        TypeSystem(
            Type(
                Object(
                    ObjectTypeDefinition {
                        description: None,
                        name: TypeName(
                            Name(
                                "User",
                            ),
                        ),
                        implements: [],
                        directives: [],
                        fields: [
                            FieldDefinition {
                                description: None,
                                name: FieldName(
                                    Name(
                                        "id",
                                    ),
                                ),
                                arguments: [],
                                typ: NonNull(
                                    Named(
                                        NamedType {
                                            name: TypeName(
                                                Name(
                                                    "ID",
                                                ),
                                            ),
                                        },
                                    ),
                                ),
                                directives: [],
                            },
                        ],
                    },
                ),
            ),
        ),
        TypeSystem(
            Type(
                Object(
                    ObjectTypeDefinition {
                        description: None,
                        name: TypeName(
                            Name(
                                "Post",
                            ),
                        ),
                        implements: [],
                        directives: [],
                        fields: [
                            FieldDefinition {
                                description: None,
                                name: FieldName(
                                    Name(
                                        "id",
                                    ),
                                ),
                                arguments: [],
                                typ: NonNull(
                                    Named(
                                        NamedType {
                                            name: TypeName(
                                                Name(
                                                    "ID",
                                                ),
                                            ),
                                        },
                                    ),
                                ),
                                directives: [],
                            },
                        ],
                    },
                ),
            ),
        ),
    ],
}
