crates/native/tests/snapshots/parser_tests__simple_mutation.snap
---
source: crates/native/tests/parser_tests.rs
expression: "parse!(r#\"mutation CreateUser { createUser(name: \"John\") { id } }\"#)"
---
Document {
    source: Source {
        code: "mutation CreateUser { createUser(name: \"John\") { id } }",
        file_path: "test.graphql",
        start_line: 1,
    },
    definitions: [
        Executable(
            Operation(
                OperationDefinition {
                    span: Span {
                        start: 0,
                        end: 55,
                    },
                    operation_type: Mutation,
                    name: Some(
                        Name(
                            "CreateUser",
                        ),
                    ),
                    variable_definitions: [],
                    directives: [],
                    selection_set: SelectionSet {
                        selections: [
                            Field(
                                Field {
                                    span: Span {
                                        start: 22,
                                        end: 53,
                                    },
                                    alias: None,
                                    name: FieldName(
                                        Name(
                                            "createUser",
                                        ),
                                    ),
                                    arguments: [
                                        Argument {
                                            span: Span {
                                                start: 33,
                                                end: 45,
                                            },
                                            name: ArgumentName(
                                                Name(
                                                    "name",
                                                ),
                                            ),
                                            value: String(
                                                "John",
                                            ),
                                        },
                                    ],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [
                                            Field(
                                                Field {
                                                    span: Span {
                                                        start: 49,
                                                        end: 53,
                                                    },
                                                    alias: None,
                                                    name: FieldName(
                                                        Name(
                                                            "id",
                                                        ),
                                                    ),
                                                    arguments: [],
                                                    directives: [],
                                                    selection_set: SelectionSet {
                                                        selections: [],
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                        ],
                    },
                },
            ),
        ),
    ],
}
