crates/native/tests/snapshots/parser_tests__type_with_description.snap
---
source: crates/native/tests/parser_tests.rs
expression: "parse!(r#\"\"A user in the system\" type User { id: ID! }\"#)"
---
Document {
    source: Source {
        code: "\"A user in the system\" type User { id: ID! }",
        file_path: "test.graphql",
        start_line: 1,
    },
    definitions: [
        TypeSystem(
            Type(
                Object(
                    ObjectTypeDefinition {
                        description: Some(
                            Description {
                                value: "A user in the system",
                            },
                        ),
                        name: TypeName(
                            Name(
                                "User",
                            ),
                        ),
                        implements: [],
                        directives: [],
                        fields: [
                            FieldDefinition {
                                description: None,
                                name: FieldName(
                                    Name(
                                        "id",
                                    ),
                                ),
                                arguments: [],
                                typ: NonNull(
                                    Named(
                                        NamedType {
                                            name: TypeName(
                                                Name(
                                                    "ID",
                                                ),
                                            ),
                                        },
                                    ),
                                ),
                                directives: [],
                            },
                        ],
                    },
                ),
            ),
        ),
    ],
}
