crates/native/tests/snapshots/parser_tests__union_definition.snap
---
source: crates/native/tests/parser_tests.rs
expression: "parse!(\"union SearchResult = User | Post | Comment\")"
---
Document {
    source: Source {
        code: "union SearchResult = User | Post | Comment",
        file_path: "test.graphql",
        start_line: 1,
    },
    definitions: [
        TypeSystem(
            Type(
                Union(
                    UnionTypeDefinition {
                        description: None,
                        name: TypeName(
                            Name(
                                "SearchResult",
                            ),
                        ),
                        directives: [],
                        members: [
                            TypeName(
                                Name(
                                    "User",
                                ),
                            ),
                            TypeName(
                                Name(
                                    "Post",
                                ),
                            ),
                            TypeName(
                                Name(
                                    "Comment",
                                ),
                            ),
                        ],
                    },
                ),
            ),
        ),
    ],
}
